--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "file-system": "^2.2.2",
+    "fs": "^0.0.1-security",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0"
